# sedh

./: .env  CHANGELOG.md  README.md  cabal.project  haskit.json
SmartSwarm/: ControllerSetup.md  Readme.md  Setup.md  WorkerSetup.md
SmartSwarm/controller/vm-manifest/: swarmcc.json
SmartSwarm/controller/zone-smf/swarm/: booter.xml
SmartSwarm/services/: swarm6780.xml
SmartSwarm/smf/swarm/: cc.xml
SmartSwarm/worker/sbin/: cn-set-swap.sh  cn-unset-swap.sh
SmartSwarm/worker/systemd/: cnswap.service  forager.service
Tour/: batch-01.edh  batch-01.py  batch01.edh  forage.edh  sessions-01.py
Tour/cnode/: setup.txt
Tour/cnode/smf/: pixie.method
Tour/cnode/systemd/: cnswap.mount  cnswap.service  var-log.mount  var.mount
edh_modules/forage/: __main__.edh
edh_modules/swarm/: CTRL.edh  ENV.edh  RT.edh  __init__.edh  __main__.edh  compat.edh  debug.edh  forage.edh  forager.edh  headhunter.edh  options.edh  symbols.edh
edh_modules/swarm/cc/: __init__.edh  __main__.edh  cnode-cfg.iedh  config.edh  debug.edh  server.edh
edh_modules/swarm/cc/web/: cc.css  cc.js  csv.iedh  front.edh  front.iedh  layout.edh  layout.iedh
edh_modules/swarm/demo/: batch.edh  etc.edh  session.edh
edh_modules/swarm/demo/batch/: __main__.edh
edh_modules/swarm/demo/batch01/: __main__.edh
edh_modules/swarm/forage/: __main__.edh
edh_modules/swarm/forager/: __main__.edh  mgmt.edh  wsq.edh
edh_modules/swarm/headhunter/: __main__.edh
edh_modules/swarm/negotiator/: __main__.edh
edh_modules/swarm/tour/: __init__.edh
edh_modules/swarm/web/: sedh
edh_modules/swarm/work/: batch.edh
edh_modules/swarm/work/batch/: __main__.edh
edh_modules/swarm/work/definition/: base.edh  batch.edh
edh_modules/swarm/worker/: __main__.edh
host.hs/: sedh.cabal
host.hs/forage/: Main.hs
host.hs/gwd/: Main.hs
host.hs/src/Language/Edh/: Swarm.hs
host.hs/src/Language/Edh/Swarm/: NodeCfg.hs  Starter.hs  Worker.hs
host.hs/swarmcc/: Main.hs
host.py/sedh/: __init__.py  headhunter.py  senv.py  symbols.py
host.py/sedh/demo/: __init__.txt  batch.py  etc.py  session.py
host.py/sedh/demo/tt/: __main__.py
host.py/sedh/hh/: __main__.py
host.py/sedh/work/: __init__.py  batch.py
host.py/sedh/worker/: __main__.py
sbin/: rptup.py
sedh/: .gitignore  sedh.cabal
sedh/forage/: Main.hs
sedh/forager/: Main.hs
sedh/gwd/: Main.hs  Repl.hs
sedh/pub/Language/Edh/: Swarm.hs
sedh/repl/: Main.hs  Repl.hs
sedh/src/Language/Edh/Solo/: BrewHere.hs
sedh/src/Language/Edh/Swarm/: Deque.hs  Forager.hs  HeadHunter.hs  MC.hsc  Starter.hs  Worker.hs
